# checape

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  style.css
data/clean-dataset/: tweets-negativos.csv
data/processed/: df_lemmetized_with_stopwords.csv  df_steamed_no_stopwords.csv  df_steamed_with_stopwords.csv  stopwords.txt
data/raw/: TweetsNeutralHash.csv
data/raw/TestDatasets/: Test3classes.csv  TestTema.csv
models/: best_model.joblib  best_model_proba.joblib  best_modelv2.joblib  tuned_pipeline.joblib
notebooks/: 01 - Exploratory data analisys.ipynb  01-Exploratory-data-analysis.ipynb  02 - Comparative Analysis.ipynb  02-Exploratory-data-analysis.ipynb  Live-Analise-Sentimentos.ipynb  cleaning-data.ipynb  data-cleaning.ipynb  data-download.ipynb  data-preprocessing.ipynb  dataframe-preprocessing-lematizacao.ipynb  dataframe-preprocessing-stemming.ipynb  download-data.ipynb  pre-processing_base.ipynb
notebooks/functions/: EDA_module.py  data_cleaning_module.py  tweets_downloader.py
src/app/: analise_comparativa.py  analise_exploratoria.py  classificador.py  comparative_analysis.html  exploratory_data_analysis.html  home.py  sobre.py
src/data/: data_cleaning_module.py  data_cleanner.py  text_preprocesser.py  text_preprocessor.py  time_converter.py  tweets_downloader.py
src/deployment/: EDA_module.py
src/files/: stopwords.txt
