[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
jupyterlab = "^3.3.4"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
mkdocs = "^1.3.0"
invoke = "^1.7.0"
streamlit = "^1.10.0"
streamlit-on-Hover-tabs = "^1.0.1"
st-annotated-text = "^3.0.0"
streamlit-tags = "^1.2.8"
streamlit-option-menu = "^0.3.2"
spacy = "^3.4.0"
nltk = "^3.7"
streamlit-aggrid = "^0.2.3"
streamlit-card = "^0.0.3"
textblob = "^0.17.1"
snscrape = "^0.4.3"
wordcloud = "^1.8.2"
demoji = "^1.1.0"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
